Implemented till schedulers, need to do broadcasting as well as alarm time level broadcast.
Need to fix notifications and create note

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,7 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="104"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_upload_notes"
+        android:orderInCategory="102"
+        android:title="Upload Notes" />
+    <item
+        android:id="@+id/action_backup_notes"
+        android:orderInCategory="100"
+        android:title="Backup Notes" />
 </menu>
