--- a/app/src/main/res/layout/item_course_list.xml
+++ b/app/src/main/res/layout/item_course_list.xml
@@ -36,11 +36,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:tint="@color/pale_orange"
                 app:layout_constraintEnd_toEndOf="@+id/text_course"
                 app:layout_constraintStart_toStartOf="@+id/text_course"
                 app:layout_constraintTop_toBottomOf="@+id/text_course"
-                app:srcCompat="@drawable/ic_menu_slideshow" />
+                app:srcCompat="@drawable/ic_menu_slideshow"
+                app:tint="@color/pale_orange" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
