--- a/app/src/main/res/layout/item_note_list.xml
+++ b/app/src/main/res/layout/item_note_list.xml
@@ -22,12 +22,12 @@
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tint="@color/pale_orange"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/text_course"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/text_course"
-                app:srcCompat="@drawable/ic_baseline_assignment_24" />
+                app:srcCompat="@drawable/ic_baseline_assignment_24"
+                app:tint="@color/pale_orange" />
 
             <TextView
                 android:id="@+id/text_course"
