--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -2,11 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.android.mernote.NoteActivity">
+
     <item
         android:id="@+id/action_send_mail"
         android:orderInCategory="100"
         android:title="send as Email"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_set_reminder"
+        android:orderInCategory="104"
+        android:title="set Reminder" />
     <item
         android:id="@+id/action_next"
         android:icon="@android:drawable/ic_media_next"
